Closed Bug 288133 Opened 21 years ago Closed 21 years ago

[FIXr]mozilla SVG build up to 2005032900: xml doctype declaration empty in save page

Categories

(Core :: XML, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.8beta2

People

(Reporter: kohl, Assigned: bzbarsky)

References

Details

(Keywords: regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050329 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050329 DOCTYPE empty after saving complete xml pages using mozilla SVG build up to 2005032900. (for same file: DOCTYPE is saved correctly when using Firefox 1.0) ((preparing error messages for Mozilla SVG isn't easier with this error)) Reproducible: Always Steps to Reproduce: 1.run the appended xml file 2.save page (completely) 3.start saved page will end up as "XML Parsing Error: syntax error" pointing to an emptied "<!DOCTYPE >" Actual Results: XML Parsing Error Expected Results: correct saving of xml page
XML file is correct, when stored alone (in the reduced example it is only an XML file, and Firefox isn't showing up the question of saving all files)
Is this Mozilla Application Suite with SVG enabled specific?
Confirming for trunk suite. The problem doesn't exist for trunk firefox.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Jonathan, it "works in Firefox" because you're comparing apples and oranges. The bug only appears in the "web page, complete" mode, which Firefox doesn't offer for XML files for some reason. So this is a basic WebBrowserPersist bug...
Assignee: general → file-handling
Component: General → File Handling
OS: Windows XP → All
Product: Mozilla Application Suite → Core
QA Contact: general → ian
Hardware: PC → All
Version: unspecified → Trunk
This broke between 2004-12-15-06 and 2004-12-16-08; probably with the expat landing. DOM inspector also shows an empty node where it should show the doctype, so it looks like doctype node creation in general was broken... Over to XML; we should really fix this for 1.8.
Assignee: file-handling → xml
Component: File Handling → XML
Flags: blocking1.8b3?
QA Contact: ian → ashshbhatt
Assignee: xml → peterv
Priority: -- → P1
Target Milestone: --- → mozilla1.8beta3
Keywords: regression
Attached patch Proposed patchSplinter Review
Luckily, expat now does all this work for us!
Assignee: peterv → bzbarsky
Status: NEW → ASSIGNED
Attachment #183058 - Flags: superreview?(peterv)
Attachment #183058 - Flags: review?(peterv)
Summary: mozilla SVG build up to 2005032900: xml doctype declaration empty in save page → [FIX]mozilla SVG build up to 2005032900: xml doctype declaration empty in save page
Comment on attachment 183058 [details] [diff] [review] Proposed patch Hey, I was about to do that :-/.
Attachment #183058 - Flags: superreview?(peterv)
Attachment #183058 - Flags: superreview+
Attachment #183058 - Flags: review?(peterv)
Attachment #183058 - Flags: review+
Comment on attachment 183058 [details] [diff] [review] Proposed patch Requesting 1.8b2 approval. This unregresses XML doctype DOM node construction, mostly by removing code that was doing work that Expat now does...
Attachment #183058 - Flags: approval1.8b2?
Summary: [FIX]mozilla SVG build up to 2005032900: xml doctype declaration empty in save page → [FIXr]mozilla SVG build up to 2005032900: xml doctype declaration empty in save page
Comment on attachment 183058 [details] [diff] [review] Proposed patch a=asa
Attachment #183058 - Flags: approval1.8b2? → approval1.8b2+
Fixed
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: mozilla1.8beta3 → mozilla1.8beta2
Flags: blocking1.8b3?
*** Bug 296359 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: