Use expat's doctype parsing now that it does it.  Bug 288133, r+sr=peterv, a=asa